tests/ui/static/gc/fsa/gc_refs_nested.stderr
error: The drop method for `HasNestedGc` cannot be safely finalized.
  --> $DIR/gc_refs_nested.rs:29:13
   |
LL |         use_val(self.a); // should fail
   |                 ------
   |                 |
   |                 a finalizer cannot safely dereference this `Gc<u64>`
   |                 from a drop method because it might have already been finalized.
...
LL |     Gc::new(HasNestedGc::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedGc>` here.

error: The drop method for `HasNestedGc` cannot be safely finalized.
  --> $DIR/gc_refs_nested.rs:29:13
   |
LL |         use_val(self.c.a); // should fail
   |                 --------
   |                 |
   |                 a finalizer cannot safely dereference this `Gc<u64>`
   |                 from a drop method because it might have already been finalized.
...
LL |     Gc::new(HasNestedGc::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedGc>` here.

error: The drop method for `HasNestedGc` cannot be safely finalized.
  --> $DIR/gc_refs_nested.rs:29:13
   |
LL |         let a = self.a; // should fail
   |                 ------
   |                 |
   |                 a finalizer cannot safely dereference this `Gc<u64>`
   |                 from a drop method because it might have already been finalized.
...
LL |     Gc::new(HasNestedGc::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedGc>` here.

error: The drop method for `HasNestedGc` cannot be safely finalized.
  --> $DIR/gc_refs_nested.rs:29:13
   |
LL |         let ca = self.a; // should fail
   |                  ------
   |                  |
   |                  a finalizer cannot safely dereference this `Gc<u64>`
   |                  from a drop method because it might have already been finalized.
...
LL |     Gc::new(HasNestedGc::default());
   |     --------^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<HasNestedGc>` here.

error: aborting due to 4 previous errors

